--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/ryanmjacobs/dining/issues"
   },
-  "homepage": "https://github.com/ryanmjacobs/dining#readme"
+  "homepage": "https://github.com/ryanmjacobs/dining#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.2"
+  }
 }
