--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dining",
+  "name": "ucla-dining",
   "version": "0.0.1",
   "description": "ucla dining hall activity scraper",
   "main": "app.js",
