--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ucla-dining",
   "version": "0.0.2",
   "description": "ucla dining hall activity scraper",
-  "main": "app.js",
+  "main": "lib/dining.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
